samples/errors/compile-error.pad
{@
    def a():
        def b() extends:
            puts(1)
        end
        b()
    end

    a()
@}